# saluton-hs-nix

./: AUTHORS  README.md  commands.sh  saluton-configuration.nix  saluton-ec2.nix
saluton/: default.nix  saluton.cabal  saluton.nix
saluton/src/: Main.hs
