name:          saluton
version:       0.1.0
build-type:    Simple
cabal-version: >= 1.18
synopsis:      A soup to nuts example of deploying Haskell apps on NixOS using NixOps

copyright:     2015 Rowan Blush
license:       AllRightsReserved
-- Note: This code is in the public domain.
--       In order to properly demonstrate deploying unfree code,
--       this cabal file (and derived nix expressions) are configured
--       with an unfree license choice.
--       For accurate copyright information, consult ../UNLICENSE .

executable saluton
  build-depends:    base
  build-depends:    scotty

  default-language: Haskell2010

  hs-source-dirs:   src
  main-is:          Main.hs
